--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -14,9 +14,8 @@ invention of the vaccines. Such dramatic social media data increase provides
 great research opportunities in social media mining and natural language
 processing.  
 
-Spatiotemporal sentiment analysis is one of the target research areas in
-social media analysis for COVID-19. In the case of pandemics, spatiotemporal
-sentiment analysis provides a reference for the development of epidemic
+Topic modeling analysis is one of the target research areas in
+social media analysis for COVID-19. In the case of pandemics, topic modeling analysis provides a reference for the development of epidemic
 mitigation measures and evaluation techniques. In the context of sentiment
 analysis, some previous studies accomplished success by using the machine
 learning technique. For instance, previous work~\cite{kastrati2021deep} used
